{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Crawl",
            "id": "2df64cf5-14bb-4ca8-8fb4-e989aa893e1e",
            "actions": [
                {
                    "name": "LeftArm",
                    "type": "Button",
                    "id": "cbc558c8-c6c6-4a4a-85c1-13d1306ba50c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArm",
                    "type": "Button",
                    "id": "21896bff-87e7-4133-be7c-26b6b63931a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamLeft",
                    "type": "Button",
                    "id": "8ce0d482-0f87-474f-b95f-cb71ad83d6b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CamRight",
                    "type": "Button",
                    "id": "901831c1-30f1-453e-b91c-15e629aaf31b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7be1254e-04c7-4c35-977a-abcab8112fe3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09f5f53e-66fd-49c0-82fe-d49df49b3775",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f891f6d-34e0-488a-9e18-c4b2d1dc098e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e36722d0-9910-4b9e-8292-54df1f845a4f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CamRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}